[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Joseph"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
